Ajout du footer

--- a/index.html
+++ b/index.html
@@ -20,6 +20,50 @@
         />
     </head>
     <body>
-        
+        <footer class="footer">
+            <section class="container">
+                <h2 class="sr-only">Footer</h2>
+                <section class="row">
+                    <h3 class="sr-only">Section du Footer</h3>
+                    <section class="footer-col">
+                         <h4>Book Hacké</h4>
+                        <ul>
+                            <li><a href="#">A propos de nous</a></li>
+                            <li><a href="#">Nos Services</a></li>
+                            <li><a href="#">Politique de confidentialité</a></li>
+                            <li><a href="#">Programme d'affiliation</a></li>
+                        </ul>
+                    </section>
+                    <section class="footer-col">
+                        <h4>Obtenir de l'aide</h4>
+                        <ul>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">Expédition</a></li>
+                            <li><a href="#">Retours</a></li>
+                            <li><a href="#">Statut</a></li>
+                            <li><a href="#">Option de paiement</a></li>
+                        </ul>
+                    </section>
+                    <section class="footer-col">
+                        <h4>Shop</h4>
+                        <ul>
+                            <li><a href="#">Regardez</a></li>
+                            <li><a href="#">Panier</a></li>
+                            <li><a href="#">Livres</a></li>
+                            <li><a href="#">Catégorie</a></li>
+                        </ul>
+                    </section>
+                    <section class="footer-col">
+                        <h4>Suivez-nous</h4>
+                        <section class="social-links">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </section>
+                    </section>
+                </section>
+            </section>
+        </footer>
     </body>
 </html>
