--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
         />
     </head>
     <body id="home-page" class="body-mode">
+        <header class="header-book">
+            <h1 class="sr-only">Book Hacké: Aimer lire ...</h1>
+            <figure>
+                <img src="https://cdn.discordapp.com/attachments/1052906431185174578/1052941339559464980/logo1.png">
+            </figure>
+            <nav>
+                <ul>
+                    <li><a href="">Accueil</a></li>
+                    <li><a href="">Magasin</a></li>
+                    <li><a href="">L'équipe</a></li>
+                    <li><a href="">Partenaires</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+            <ul>
+                <li><a href=""><span class="fa-solid fa-user"></span><span>Mon compte</span></a></li>
+                <li><a href=""><span class="fa-solid fa-cart-shopping"></span><span>Mon panier</span></a></li>
+                <li><a href=""><span class="fa-solid fa-circle-question"></span><span>Aide</span></a></li>
+            </ul>
+        </header>
         <main>
             <section>
                 
