mise à jour bannière homepage

--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
         </header>
         <main>
             <section>
-
+                <section>
+                    <h2><span>B</span>ook<span> H</span>acké</h2>
+                    <h3>Des <span> professionnels</span> du livre à votre <span>service</span></h3>
+                </section>
+                <figure>
+                    <img src="https://cdn.discordapp.com/attachments/1039550853033500782/1052888099220369430/header.png">
+                </figure>
             </section>
             <section>
 
