modification de la homepage avec ajout des meilleures ventes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"
         />
     </head>
+
     <body id="home-page" class="body-mode">
         <header class="header-book">
             <h1 class="sr-only">Book Hacké: Aimer lire ...</h1>
@@ -28,8 +29,8 @@
             </figure>
             <nav>
                 <ul>
-                    <li><a href="">Accueil</a></li>
-                    <li><a href="">Magasin</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="single-list.html">Collection</a></li>
                     <li><a href="">L'équipe</a></li>
                     <li><a href="">Partenaires</a></li>
                     <li><a href="">Contact</a></li>
@@ -52,6 +53,129 @@
                 </figure>
             </section>
             <section>
+                <h4>Nos meilleures ventes</h4>
+                <article class="book">
+                    <header>
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption>Couverture du livre: "" de .</figcaption>
+                        </figure>
+                        <h4></h4>
+                    </header>
+                    <section>
+                        <h4></h4>
+                        <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                    </section>
+                    <footer>
+                        <a href="">Prix: <span>Ajouter au panier</span></a>
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption></figcaption>
+                        </figure>
+                    </footer>
+                </article>
+
+                <article class="book">
+                    <header>
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption>Couverture du livre: "" de .</figcaption>
+                        </figure>
+                        <h4></h4>
+                    </header>
+                    <section>
+                        <h4></h4>
+                        <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                    </section>
+                    <footer>
+                        <a href="">Prix: <span>Ajouter au panier</span></a>
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption></figcaption>
+                        </figure>
+                    </footer>
+                </article>
+
+                <article class="book">
+                    <header>
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption>Couverture du livre: "" de .</figcaption>
+                        </figure>
+                        <h4></h4>
+                    </header>
+                    <section>
+                        <h4></h4>
+                        <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                    </section>
+                    <footer>
+                        <a href="">Prix: <span>Ajouter au panier</span></a>
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption></figcaption>
+                        </figure>
+                    </footer>
+                </article>
+                <article class="book">
+                    <header>
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption>Couverture du livre: "" de .</figcaption>
+                        </figure>
+                        <h4></h4>
+                    </header>
+                    <section>
+                        <h4></h4>
+                        <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                    </section>
+                    <footer>
+                        <a href="">Prix: <span>Ajouter au panier</span></a>
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption></figcaption>
+                        </figure>
+                    </footer>
+                </article>
+                <article class="book">
+                    <header>
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption>Couverture du livre: "" de .</figcaption>
+                        </figure>
+                        <h4></h4>
+                    </header>
+                    <section>
+                        <h4></h4>
+                        <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                    </section>
+                    <footer>
+                        <a href="">Prix: <span>Ajouter au panier</span></a>
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption></figcaption>
+                        </figure>
+                    </footer>
+                </article>
+                <article class="book">
+                    <header>
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption>Couverture du livre: "" de .</figcaption>
+                        </figure>
+                        <h4></h4>
+                    </header>
+                    <section>
+                        <h4></h4>
+                        <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                    </section>
+                    <footer>
+                        <a href="">Prix: <span>Ajouter au panier</span></a>
+                        <figure>
+                            <img src="" alt="">
+                            <figcaption></figcaption>
+                        </figure>
+                    </footer>
+                </article>
 
             </section>
             <section>
@@ -64,7 +188,7 @@
                 <section class="row">
                     <h3 class="sr-only">Section du Footer</h3>
                     <section class="footer-col">
-                         <h4>Book Hacké</h4>
+                        <h4>Book Hacké</h4>
                         <ul>
                             <li><a href="#">A propos de nous</a></li>
                             <li><a href="#">Nos Services</a></li>
@@ -104,4 +228,5 @@
             </section>
         </footer>
     </body>
+
 </html>
