mise à jour de book et ajout des liens

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="single-list.html">Collection</a></li>
+                    <li><a href="singles-list.html">Collection</a></li>
                     <li><a href="">L'équipe</a></li>
                     <li><a href="">Partenaires</a></li>
                     <li><a href="">Contact</a></li>
@@ -64,12 +64,12 @@
                     </header>
                     <section>
                         <h4>20th century boys Volume 1 Edition deluxe</h4>
-                        <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                        <a href="single.html">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
                     </section>
                     <footer>
                         <a href="">Prix: 16.99&#8364; <span>Ajouter au panier</span></a>
                         <figure>
-                            <img src="" alt="Portrait de Naoki Urasawa">
+                            <img src="assets/img/naoki-urasawa.jpg" alt="Portrait de Naoki Urasawa">
                             <figcaption>Naoki Urasawa</figcaption>
                         </figure>
                     </footer>
@@ -85,12 +85,12 @@
                     </header>
                     <section>
                         <h4>Harry Potter à l'école des sorciers</h4>
-                        <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                        <a href="single.html">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
                     </section>
                     <footer>
                         <a href="">Prix: 14.99&#8364; <span>Ajouter au panier</span></a>
                         <figure>
-                            <img src="" alt="Portrait de J.K Rowling">
+                            <img src="assets/img/jk-rowling.jpg" alt="Portrait de J.K Rowling">
                             <figcaption>J.K Rowling</figcaption>
                         </figure>
                     </footer>
@@ -106,12 +106,12 @@
                     </header>
                     <section>
                         <h4>Le droit à la paresse</h4>
-                        <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                        <a href="single.html">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
                     </section>
                     <footer>
                         <a href="">Prix: 8.99&#8364; <span>Ajouter au panier</span></a>
                         <figure>
-                            <img src="" alt="Portrait de Paul Lafargue">
+                            <img src="assets/img/paul-lafargue.jpeg" alt="Portrait de Paul Lafargue">
                             <figcaption>Paul Lafargue</figcaption>
                         </figure>
                     </footer>
@@ -126,12 +126,12 @@
                     </header>
                     <section>
                         <h4>Le combat ordinaire</h4>
-                        <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                        <a href="single.html">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
                     </section>
                     <footer>
                         <a href="">Prix: 13.99&#8364; <span>Ajouter au panier</span></a>
                         <figure>
-                            <img src="" alt="Portrait de Manu Larcenet">
+                            <img src="assets/img/larcenet.jpg" alt="Portrait de Manu Larcenet">
                             <figcaption>Manu Larcenet</figcaption>
                         </figure>
                     </footer>
@@ -146,12 +146,12 @@
                     </header>
                     <section>
                         <h4>Le Silmarillion</h4>
-                        <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                        <a href="single.html">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
                     </section>
                     <footer>
                         <a href="">Prix: 15.99&#8364; <span>Ajouter au panier</span></a>
                         <figure>
-                            <img src="" alt="Portrait de Tolkien">
+                            <img src="assets/img/jrr-tolkien.jpg" alt="Portrait de Tolkien">
                             <figcaption>J.R.R Tolkien</figcaption>
                         </figure>
                     </footer>
@@ -166,12 +166,12 @@
                     </header>
                     <section>
                         <h4>Le Sorceleur Tome 3</h4>
-                        <a href="">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                        <a href="single.html">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
                     </section>
                     <footer>
                         <a href="">Prix: 10.99&#8364; <span>Ajouter au panier</span></a>
                         <figure>
-                            <img src="" alt="Portrait de Adrzej Sapkowski">
+                            <img src="assets/img/sapkowski.jpeg" alt="Portrait de Adrzej Sapkowski">
                             <figcaption>Adrzej Sapkowski</figcaption>
                         </figure>
                     </footer>
