--- a/single.html
+++ b/single.html
@@ -27,8 +27,8 @@
             </figure>
             <nav>
                 <ul>
-                    <li><a href="">Accueil</a></li>
-                    <li><a href="">Magasin</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="singles-list.html">Collection</a></li>
                     <li><a href="">L'équipe</a></li>
                     <li><a href="">Partenaires</a></li>
                     <li><a href="">Contact</a></li>
@@ -46,14 +46,14 @@
                 <section>
                     <h3>Description :</h3>
                     <p>
-                      Après une introduction cosmogonique (<q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">Ainulindalë</q>) puis une présentation des Valar, les puissances qui gouvernent le monde (<q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">Valaquenta</q>), le cœur de l'ouvrage est constitué par le Quenta Silmarillion, un long récit des malheurs et exploits des Elfes jusqu'à la chute de Morgoth, le premier Seigneur des ténèbres. Le titre de cette section, et du livre tout entier, provient des Silmarils, trois joyaux aux pouvoirs fabuleux qui sont le catalyseur de l'histoire. Le reste du livre s'attache à la gloire et la chute des Hommes de l'île de Númenor au Second Âge (<q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">Akallabêth</q>), et à l'histoire de la Terre du Milieu jusqu'à la guerre de l'Anneau et après (<q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">Les Anneaux de Pouvoir et le Troisième Âge</q>).   
+                      Après une introduction cosmogonique (<q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">Ainulindalë</q>) puis une présentation des Valar, les puissances qui gouvernent le monde (<q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">Valaquenta</q>), le cœur de l'ouvrage est constitué par le Quenta Silmarillion, un long récit des malheurs et exploits des Elfes jusqu'à la chute de Morgoth, le premier Seigneur des ténèbres. Le titre de cette section, et du livre tout entier, provient des Silmarils, trois joyaux aux pouvoirs fabuleux qui sont le catalyseur de l'histoire. Le reste du livre s'attache à la gloire et la chute des Hommes de l'île de Númenor au Second Âge (<q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">Akallabêth</q>), et à l'histoire de la Terre du Milieu jusqu'à la guerre de l'Anneau et après (<q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">Les Anneaux de Pouvoir et le Troisième Âge</q>).
                     </p>
                     <p>
                         J.R.R. Tolkien a commencé à élaborer la mythologie du <q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">Silmarillion</q> dans les années 1910 et la travaille jusqu'à sa mort, en 1973. Attendu avec impatience par les lecteurs du Seigneur des anneaux, Le Silmarillion reçoit des critiques diverses à sa sortie : certains saluent son souffle épique, d'autres le trouvent tout à fait ennuyeux, mais tous soulignent sa grande difficulté et la différence importante de ton avec les précédents ouvrages de J.R.R. Tolkien. Il remporte le Prix Locus du meilleur roman de fantasy en 1978. Traduit une première fois en français en 1978 (P. Alien), une seconde fois en 2021 par Daniel Lauzon, aux éditions Christian Bourgois.
                     </p>
                 </section>
                 <section>
-                    <h3 class="sr-only">Prix</h3>   
+                    <h3 class="sr-only">Prix</h3>
                     <figure>
                         <img src="https://products-images.di-static.com/image/john-ronald-reuel-tolkien-le-silmarillion/9782267046687-475x500-1.jpg" alt="Couverture 'Le Silmarillion' édition de Christopher Tolkien">
                     </figure>
@@ -103,7 +103,7 @@
                             <thead>
                                 <tr>
                                     <th>
-                                       <h6>Edition Standard</h6> 
+                                       <h6>Edition Standard</h6>
                                     </th>
                                 </tr>
                         </thead>
