Ajout des member-card à l'index

--- a/index.html
+++ b/index.html
@@ -179,7 +179,63 @@
 
             </section>
             <section>
-
+                <article class="team-member">
+                    <header>
+                        <figure>
+                            <img src="assets/img/lwy.jpg" alt="">
+                            <figcaption>Un membre éminent de notre équipe.</figcaption>
+                        </figure>
+                        <h4>ID: LeLwy</h4>
+                    </header>
+                    <section>
+                        <h4>ID: LeLwy</h4>
+                        <a href="">En savoir plus<span class="fa-solid fa-user-plus"></span></a>
+                        <ul>
+                            <li><span class="fa-solid fa-square-check"></span>Milite pour la déforestation et contre la sobriété.</li>
+                            <li><span class="fa-solid fa-square-check"></span>Hacking à la hache.</li>
+                            <li><span class="fa-solid fa-square-check"></span>Vend du code à la stère.</li>
+                            <li><span class="fa-solid fa-quote-left"></span>"J'en ai pas l'air, mais je suis quelqu'un de sensible."</li>
+                        </ul>
+                    </section>
+                </article>
+                <article class="team-member">
+                    <header>
+                        <figure>
+                            <img src="assets/img/" alt="">
+                            <figcaption>Un membre éminent de notre équipe.</figcaption>
+                        </figure>
+                        <h4>ID: </h4>
+                    </header>
+                    <section>
+                        <h4>ID: </h4>
+                        <a href="">En savoir plus<span class="fa-solid fa-user-plus"></span></a>
+                        <ul>
+                            <li><span class="fa-solid fa-square-check"></span></li>
+                            <li><span class="fa-solid fa-square-check"></span></li>
+                            <li><span class="fa-solid fa-square-check"></span></li>
+                            <li><span class="fa-solid fa-quote-left"></span>""</li>
+                        </ul>
+                    </section>
+                </article>
+                <article class="team-member">
+                    <header>
+                        <figure>
+                            <img src="assets/img/" alt="">
+                            <figcaption>Un membre éminent de notre équipe.</figcaption>
+                        </figure>
+                        <h4>ID: </h4>
+                    </header>
+                    <section>
+                        <h4>ID: </h4>
+                        <a href="">En savoir plus<span class="fa-solid fa-user-plus"></span></a>
+                        <ul>
+                            <li><span class="fa-solid fa-square-check"></span></li>
+                            <li><span class="fa-solid fa-square-check"></span></li>
+                            <li><span class="fa-solid fa-square-check"></span></li>
+                            <li><span class="fa-solid fa-quote-left"></span>""</li>
+                        </ul>
+                    </section>
+                </article>
             </section>
         </main>
         <footer class="footer">
