Mise à jour de la home-page

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 
             </section>
             <section>
+                <h4>Notre équipe</h4>
                 <article class="team-member">
                     <header>
                         <figure>
