page singles-list

--- a/singles-list.html
+++ b/singles-list.html
@@ -14,13 +14,13 @@
     <meta property="og:locale" content="fr_FR">
     <meta property="og:image" content="">
     <meta charset="utf-8">
-    <title>Accueil</title>
+    <title>Catégories</title>
     <link rel="stylesheet" href="assets/styles/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
 </head>
 
-<body id="home-page" class="body-mode">
+<body id="singles-list" class="body-mode">
     <header class="header-book">
         <h1 class="sr-only">Book Hacké: Aimer lire ...</h1>
         <figure>
