MAJ singles-list html et scss

--- a/singles-list.html
+++ b/singles-list.html
@@ -54,9 +54,129 @@
         </section>
         <section>
             <h4>Livres</h4>
+            <article class="book">
+                    <header>
+                        <figure>
+                            <img src="assets/img/harry-potter.jpg" alt="Le titre du livre avec un fond rouge et un hibou avec une lettre dans la bouche">
+                            <figcaption>Couverture du livre: "Harry Potter à l'école des sorciers" de J.K Rowling</figcaption>
+                        </figure>
+                        <h4>Harry Potter à l'école des sorciers</h4>
+                    </header>
+                    <section>
+                        <h4>Harry Potter à l'école des sorciers</h4>
+                        <a href="single.html">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                    </section>
+                    <footer>
+                        <a href="">Prix: 14.99&#8364; <span>Ajouter au panier</span></a>
+                        <figure>
+                            <img src="assets/img/jk-rowling.jpg" alt="Portrait de J.K Rowling">
+                            <figcaption>J.K Rowling</figcaption>
+                        </figure>
+                    </footer>
+                </article>
+                <article class="book">
+                    <header>
+                        <figure>
+                            <img src="assets/img/cover-1.jpg" alt="Couverture jaune représentant une personne âgée s'endormant sur un fauteuil entouré de journaux">
+                            <figcaption>Couverture du livre: "Le droit à la paresse" de Paul Lafargue</figcaption>
+                        </figure>
+                        <h4>Le droit à la paresse</h4>
+                    </header>
+                    <section>
+                        <h4>Le droit à la paresse</h4>
+                        <a href="single.html">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                    </section>
+                    <footer>
+                        <a href="">Prix: 8.99&#8364; <span>Ajouter au panier</span></a>
+                        <figure>
+                            <img src="assets/img/paul-lafargue.jpeg" alt="Portrait de Paul Lafargue">
+                            <figcaption>Paul Lafargue</figcaption>
+                        </figure>
+                    </footer>
+                </article>
+                <article class="book">
+                    <header>
+                        <figure>
+                            <img src="assets/img/le-silmarillion.jpg" alt="">
+                            <figcaption>Couverture du livre: "Le Silmarillion" de J.R.R Tolkien</figcaption>
+                        </figure>
+                        <h4>Le Silmarillion</h4>
+                    </header>
+                    <section>
+                        <h4>Le Silmarillion</h4>
+                        <a href="single.html">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                    </section>
+                    <footer>
+                        <a href="">Prix: 15.99&#8364; <span>Ajouter au panier</span></a>
+                        <figure>
+                            <img src="assets/img/jrr-tolkien.jpg" alt="Portrait de Tolkien">
+                            <figcaption>J.R.R Tolkien</figcaption>
+                        </figure>
+                    </footer>
+                </article>
+                <article class="book">
+                    <header>
+                        <figure>
+                            <img src="assets/img/the-witcher.jpg" alt="Le sorceleur en train de se battre contre un bandit">
+                            <figcaption>Couverture du livre: "Le Sorceleur Tome 3" de Adrzej Sapkowski</figcaption>
+                        </figure>
+                        <h4>Le Sorceleur Tome 3</h4>
+                    </header>
+                    <section>
+                        <h4>Le Sorceleur Tome 3</h4>
+                        <a href="single.html">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                    </section>
+                    <footer>
+                        <a href="">Prix: 10.99&#8364; <span>Ajouter au panier</span></a>
+                        <figure>
+                            <img src="assets/img/sapkowski.jpeg" alt="Portrait de Adrzej Sapkowski">
+                            <figcaption>Adrzej Sapkowski</figcaption>
+                        </figure>
+                    </footer>
+                </article>
         </section>
         <section>
             <h4>Bande-dessinées</h4>
+            <article class="book">
+                <header>
+                    <figure>
+                        <img src="assets/img/20th-century-boy.png" alt="portrait de Kenji le héros du manga">
+                        <figcaption>Couverture du livre: "20th century boys Volume 1 Edition deluxe" de Naoki Urasawa</figcaption>
+                    </figure>
+                    <h4>20th century boys Volume 1 Edition deluxe</h4>
+                </header>
+                <section>
+                    <h4>20th century boys Volume 1 Edition deluxe</h4>
+                    <a href="single.html">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                </section>
+                <footer>
+                    <a href="">Prix: 16.99&#8364; <span>Ajouter au panier</span></a>
+                    <figure>
+                        <img src="assets/img/naoki-urasawa.jpg" alt="Portrait de Naoki Urasawa">
+                        <figcaption>Naoki Urasawa</figcaption>
+                    </figure>
+                </footer>
+            </article>
+            <article class="book">
+                <header>
+                    <figure>
+                        <img src="assets/img/le-combat-ordinaire.jpg" alt="Un homme cigarette à la bouche allongé avec son chat sur des sacs poubelles remplis de photos.">
+                        <figcaption>Couverture du livre: "Le combat ordinaire" de Manu Larcenet</figcaption>
+                    </figure>
+                    <h4>Le combat ordinaire</h4>
+                </header>
+                <section>
+                    <h4>Le combat ordinaire</h4>
+                    <a href="single.html">Détails<span class="fa-solid fa-arrow-down-short-wide"></span></a>
+                </section>
+                <footer>
+                    <a href="">Prix: 13.99&#8364; <span>Ajouter au panier</span></a>
+                    <figure>
+                        <img src="assets/img/larcenet.jpg" alt="Portrait de Manu Larcenet">
+                        <figcaption>Manu Larcenet</figcaption>
+                    </figure>
+                </footer>
+            </article>
         </section>
     </main>
     <footer class="footer">
