--- a/index.html
+++ b/index.html
@@ -202,38 +202,38 @@
                 <article class="team-member">
                     <header>
                         <figure>
-                            <img src="assets/img/" alt="">
+                            <img src="assets/img/Tony.jpg" alt="">
                             <figcaption>Un membre éminent de notre équipe.</figcaption>
                         </figure>
-                        <h4>ID: </h4>
+                        <h4>ID: Azurior</h4>
                     </header>
                     <section>
-                        <h4>ID: </h4>
+                        <h4>ID: Azurior</h4>
                         <a href="">En savoir plus<span class="fa-solid fa-user-plus"></span></a>
                         <ul>
-                            <li><span class="fa-solid fa-square-check"></span></li>
-                            <li><span class="fa-solid fa-square-check"></span></li>
-                            <li><span class="fa-solid fa-square-check"></span></li>
-                            <li><span class="fa-solid fa-quote-left"></span>""</li>
+                            <li><span class="fa-solid fa-square-check"></span>Chauve dans le déni.</li>
+                            <li><span class="fa-solid fa-square-check"></span>À piraté la NASA avec son Tamagotchi.</li>
+                            <li><span class="fa-solid fa-square-check"></span>Trop dark le gonze.</li>
+                            <li><span class="fa-solid fa-quote-left"></span>"J'en ai pas l'air, mais je suis quelqu'un de cruel."</li>
                         </ul>
                     </section>
                 </article>
                 <article class="team-member">
                     <header>
                         <figure>
-                            <img src="assets/img/" alt="">
+                            <img src="assets/img/valmont.jpg" alt="">
                             <figcaption>Un membre éminent de notre équipe.</figcaption>
                         </figure>
-                        <h4>ID: </h4>
+                        <h4>ID: Valmonzo</h4>
                     </header>
                     <section>
-                        <h4>ID: </h4>
+                        <h4>ID: Valmonzo</h4>
                         <a href="">En savoir plus<span class="fa-solid fa-user-plus"></span></a>
                         <ul>
-                            <li><span class="fa-solid fa-square-check"></span></li>
-                            <li><span class="fa-solid fa-square-check"></span></li>
-                            <li><span class="fa-solid fa-square-check"></span></li>
-                            <li><span class="fa-solid fa-quote-left"></span>""</li>
+                            <li><span class="fa-solid fa-square-check"></span>Fan de Jeffrey Dahmer.</li>
+                            <li><span class="fa-solid fa-square-check"></span>Si il rentre dans ton PC, efface ton historique.</li>
+                            <li><span class="fa-solid fa-square-check"></span>La Sillicone Valley le déteste.</li>
+                            <li><span class="fa-solid fa-quote-left"></span>"J'en ai pas l'air, mais je suis quelqu'un."</li>
                         </ul>
                     </section>
                 </article>
