--- a/single.html
+++ b/single.html
@@ -102,7 +102,7 @@
                         <table>
                             <thead>
                                 <tr>
-                                    <th>
+                                    <th colspan="2">
                                        <h6>Edition Standard</h6>
                                     </th>
                                 </tr>
@@ -164,7 +164,7 @@
                         <table>
                             <thead>
                                 <tr>
-                                    <th>
+                                    <th colspan="2">
                                         <h6>Edition 30 ème anniversaire</h6>
                                     </th>
                                 </tr>
