--- a/single.html
+++ b/single.html
@@ -165,7 +165,8 @@
                         <table>
                             <thead>
                                 <tr>
-                                    <th colspan="2">
+                                    <th colspan="2
+                                    ">
                                         <h6>Edition 30 ème anniversaire</h6>
                                     </th>
                                 </tr>
@@ -228,7 +229,7 @@
                         <thead>
                             <tr>
                                 <th>
-                                    <h6>Edition Illustré</h6>
+                                    <h6>Edition Illustrée</h6>
                                 </th>
                             </tr>
                         </thead>
