Correction navbar responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <meta property="og:type" content="article">
         <meta property="og:locale" content="fr_FR">
         <meta property="og:image" content="">
-        <meta charset="utf-8">
         <title>Accueil</title>
         <link rel="stylesheet" href="assets/styles/css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"
@@ -24,10 +23,11 @@
         <header class="header-book">
             <h1 class="sr-only">Book Hacké: Aimer lire ...</h1>
             <figure>
-                <img class="light-logo" src="https://cdn.discordapp.com/attachments/1052906431185174578/1052941339559464980/logo1.png">
-                <img class="dark-logo" src="https://cdn.discordapp.com/attachments/1052906431185174578/1052969777523609652/logo-white.png">
+                <img class="light-logo" src="https://cdn.discordapp.com/attachments/1052906431185174578/1052941339559464980/logo1.png" alt="Logo pour le mode light">
+                <img class="dark-logo" src="https://cdn.discordapp.com/attachments/1052906431185174578/1052969777523609652/logo-white.png" alt="Logo pour le mode dark">
             </figure>
             <nav>
+                <h2 class="sr-only">Navigation principale</h2>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="singles-list.html">Collection</a></li>
@@ -44,12 +44,13 @@
         </header>
         <main>
             <section>
+                <h2 class="sr-only">Bannière du site</h2>
                 <section>
                     <h2><span>B</span>ook<span> H</span>acké</h2>
                     <h3>Des <span> professionnels</span> du livre à votre <span>service</span></h3>
                 </section>
                 <figure>
-                    <img src="https://cdn.discordapp.com/attachments/1039550853033500782/1052888099220369430/header.png">
+                    <img src="https://cdn.discordapp.com/attachments/1039550853033500782/1052888099220369430/header.png" alt="Image représentant nos bouquins préférés pour la bannière principale">
                 </figure>
             </section>
             <section>
@@ -275,6 +276,7 @@
                     <section class="footer-col">
                         <h4>Suivez-nous</h4>
                         <section class="social-links">
+                            <h2 class="sr-only">Liens de nos réseaux sociaux</h2>
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
                             <a href="#"><i class="fab fa-instagram"></i></a>
