--- a/single.html
+++ b/single.html
@@ -27,6 +27,7 @@
                 <img class="dark-logo" src="https://cdn.discordapp.com/attachments/1052906431185174578/1052969777523609652/logo-white.png">
             </figure>
             <nav>
+                <h2 class="sr-only">Navigation principale</h2>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="singles-list.html">Collection</a></li>
